acceptance/tests/fixtures/bases/api-gateway-v2/gatewayclassconfig.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

apiVersion: mesh.consul.hashicorp.com/v2beta1
kind: GatewayClassConfig
metadata:
  name: gateway-class-config
