acceptance/tests/fixtures/bases/api-gateway-v2/kustomization.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

resources:
  - gatewayclassconfig.yaml
  - gatewayclass.yaml
  - apigateway.yaml
  - tcproute.yaml
  - meshservice.yaml
